flagsdir = $(datadir)/xfce4/xkb/flags

flags_DATA = ae.png \
                                 am.png \
                                 ar.png \
                                 at.png \
                                 az.png \
                                 be.png \
                                 bg.png \
                                 bh.png \
                                 br.png \
                                 by.png \
                                 ca.png \
                                 ch.png \
                                 cu.png \
                                 cz.png \
                                 de.png \
                                 dj.png \
                                 dk.png \
                                 dz.png \
                                 ee.png \
                                 eg.png \
                                 es.png \
                                 eu.png \
                                 fi.png \
                                 fr.png \
                                 ge.png \
                                 gr.png \
                                 hr.png \
                                 hu.png \
                                 il.png \
                                 iq.png \
                                 is.png \
                                 it.png \
                                 jo.png \
                                 jp.png \
                                 km.png \
                                 kr.png \
                                 kw.png \
                                 la.png \
                                 lb.png \
                                 lt.png \
                                 ly.png \
                                 ma.png \
                                 mk.png \
                                 mn.png \
                                 mx.png \
                                 nl.png \
                                 no.png \
                                 om.png \
                                 pl.png \
                                 ps.png \
                                 pt.png \
                                 qa.png \
                                 qc.png \
                                 ro.png \
                                 ru.png \
                                 sa.png \
                                 sd.png \
                                 se.png \
                                 si.png \
                                 sk.png \
                                 so.png \
                                 sr.png \
                                 sy.png \
                                 th.png \
                                 tn.png \
                                 tr.png \
                                 ua.png \
                                 uk.png \
                                 un.png \
                                 us.png \
                                 uy.png \
                                 vn.png \
                                 ye.png \
                                 yu.png

EXTRA_DIST = $(flags_DATA)
